--- a/FastlaneDemo/Base.lproj/Main.storyboard
+++ b/FastlaneDemo/Base.lproj/Main.storyboard
@@ -29,6 +29,9 @@
                             <constraint firstAttribute="centerY" secondItem="gnE-AN-HHB" secondAttribute="centerY" id="rNN-l6-Irc"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="helloLabel" destination="gnE-AN-HHB" id="cwP-yp-60c"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
